mosquitto/mosquitto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - lacamelia.ddns.net
      secretName: nodered-tls-qsl89
  rules:
    - host: lacamelia.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  number: 1883
